--- a/landing.html
+++ b/landing.html
@@ -161,6 +161,13 @@
             transform-style: preserve-3d;
             animation: logoFloat 6s ease-in-out infinite;
         }
+        .logo-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 50%;
+}
+
 
         @keyframes logoFloat {
             0%, 100% {
@@ -174,30 +181,49 @@
             }
         }
 
-        .logo-circle {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            border: 4px solid transparent;
-            border-top-color: var(--primary);
-            border-right-color: var(--secondary);
-            border-bottom-color: var(--accent);
-            border-left-color: var(--primary-dark);
-            animation: logoSpin 8s linear infinite;
-        }
+        .logo {
+    width: 150px;
+    height: 150px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: logoFloat 6s ease-in-out infinite;
+}
 
-        .logo-inner {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 60%;
-            height: 60%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+.logo-circle {
+    position: absolute;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    border: 5px solid transparent;
+    border-top-color: var(--primary);
+    border-right-color: var(--secondary);
+    border-bottom-color: var(--accent);
+    border-left-color: var(--primary-dark);
+    animation: logoSpin 8s linear infinite;
+    z-index: 1;
+}
+
+.logo-inner {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    z-index: 2;
+}
+
+.logo-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 
         .logo-brain {
             width: 100%;
@@ -445,8 +471,9 @@
                 <div class="logo">
                     <div class="logo-circle"></div>
                     <div class="logo-inner">
-                        <div class="logo-brain"></div>
+                        <img src="logo.png" alt="Mindpal Logo" class="logo-image">
                     </div>
+                    
                 </div>
             </div>
             
