Update and rename landing.html to index.html

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <p class="subheading">A New Era of Mental and Neurological Wellness</p>
             </div>
             
-            <a href="index.html" class="cta-button">
+            <a href="home.html" class="cta-button">
                 <span class="cta-button-text">
                     Start Your Journey
                     <span class="cta-button-icon"></span>
