--- a/home.html
+++ b/home.html
@@ -1738,7 +1738,7 @@
                         <div class="container">
                             <div class="clinical-container">
                                 <div class="clinical-image">
-                                    <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Clinical Research Study">
+                                    <img src="nerve.png" alt="Clinical Research Study">
                                 </div>
                                 <div class="clinical-content">
                                     <h2 class="section-title">Clinically Validated Results</h2>
